--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     .meta{color:var(--muted);margin-bottom:8px}
     video,iframe{width:100%;max-width:100%;aspect-ratio:16/9;border:0;border-radius:12px;background:#000}
     .note{color:var(--muted);font-size:14px;margin-top:8px}
+    .card + .card {margin-top: 24px; }
   </style>
 </head>
 <body>
@@ -29,15 +30,19 @@
         <source src="videoforass0.mp4" type="video/mp4" /> 
         Your browser doesn’t support the video tag.
       </video>
+      </section>
 
-      <!-- Option B: YouTube/Vimeo embed (use instead of the <video> above)
-      <iframe
-        src="https://www.youtube.com/embed/VIDEO_ID"
-        title="Assignment 0 – Ankit Singh"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen>
-      </iframe>
-      -->
+      <section class="card">
+      <h1>Assignment 1: Keyframing</h1>
+      <div class="meta">Name: <strong>Ankit Singh</strong> &nbsp;•&nbsp; RIT ID: <strong>as8878</strong></div>
+
+      <h2>Video</h2>
+      <!-- Option A: local MP4 (put assignment0.mp4 in the same folder) -->
+    
+      <video controls preload="metadata" style="width:100%;max-width:920px;background:#000">
+        <source src="videoforass1.mp4" type="video/mp4" /> 
+        Your browser doesn’t support the video tag.
+      </video>
     </section>
   </main>
 </body>
