Updated ass 3a videos

--- a/index.html
+++ b/index.html
@@ -16,109 +16,132 @@
     .note{color:var(--muted);font-size:14px;margin-top:8px}
     .card + .card {margin-top: 24px; }
     .video-buttons {
-  position: relative;
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 10px;
-  gap: 8px;
-}
-
-.video-buttons button {
-  background-color: #1f2937;
-  color: #e5e7eb;
-  border: 1px solid #4b5563;
-  padding: 8px 12px;
-  border-radius: 8px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: all 0.3s ease;
-}
-
-.video-buttons button:hover {
-  background-color: #2563eb;
-  color: white;
-  border-color: #2563eb;
-}
-
+      position: relative;
+      display: flex;
+      justify-content: flex-end;
+      margin-bottom: 10px;
+      gap: 8px;
+    }
+    .video-buttons button {
+      background-color: #1f2937;
+      color: #e5e7eb;
+      border: 1px solid #4b5563;
+      padding: 8px 12px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: all 0.3s ease;
+    }
+    .video-buttons button:hover {
+      background-color: #2563eb;
+      color: white;
+      border-color: #2563eb;
+    }
   </style>
 </head>
 <body>
   <main class="wrap">
+
+    <!-- Assignment 0 -->
     <section class="card">
       <h1>Assignment 0: Animation Framework</h1>
       <div class="meta">Name: <strong>Ankit Singh</strong> &nbsp;•&nbsp; RIT ID: <strong>as8878</strong></div>
 
       <h2>Video</h2>
-      <!-- Option A: local MP4 (put assignment0.mp4 in the same folder) -->
-    
       <video controls preload="metadata" style="width:100%;max-width:920px;background:#000">
         <source src="videoforass0.mp4" type="video/mp4" /> 
         Your browser doesn’t support the video tag.
       </video>
-      </section>
+    </section>
 
-      <section class="card">
+    <!-- Assignment 1 -->
+    <section class="card">
       <h1>Assignment 1: Keyframing</h1>
       <div class="meta">Name: <strong>Ankit Singh</strong> &nbsp;•&nbsp; RIT ID: <strong>as8878</strong></div>
 
       <h2>Video</h2>
-      <!-- Option A: local MP4 (put assignment0.mp4 in the same folder) -->
-    
       <video controls preload="metadata" style="width:100%;max-width:920px;background:#000">
         <source src="videoforass1.mp4" type="video/mp4" /> 
         Your browser doesn’t support the video tag.
       </video>
     </section>
 
+    <!-- Assignment 2 -->
     <section class="card">
-    <h1>Assignment 2: Billiards</h1>
-    <div class="meta">Name: <strong>Ankit Singh</strong> &nbsp;•&nbsp; RIT ID: <strong>as8878</strong></div>
-    <h2>Video</h2>
-    <div class="video-buttons">
-  <button onclick="prevVideo()">⟵</button>
-  <button onclick="nextVideo()">⟶</button>
-    </div>
-  <div id="videoContainer">
-  <video controls preload="metadata" style="display: none;">
-    <source src="videoforass2a.mp4" type="video/mp4">
-  </video>
-  <video controls preload="metadata" style="display: none;">
-    <source src="videoforass2b.mp4" type="video/mp4">
-  </video>
-  <video controls preload="metadata" style="display: none;">
-    <source src="videoforass2c.mp4" type="video/mp4">
-  </video>
-  <video controls preload="metadata" style="display: none;">
-    <source src="videoforass2d.mp4" type="video/mp4">
-  </video>
-</div>
-</section>
+      <h1>Assignment 2: Billiards</h1>
+      <div class="meta">Name: <strong>Ankit Singh</strong> &nbsp;•&nbsp; RIT ID: <strong>as8878</strong></div>
+
+      <h2>Video</h2>
+
+      <div class="video-buttons">
+        <button onclick="prevVideo()">⟵</button>
+        <button onclick="nextVideo()">⟶</button>
+      </div>
+
+      <div id="videoContainer">
+        <video controls preload="metadata" style="display: none;">
+          <source src="videoforass2a.mp4" type="video/mp4">
+        </video>
+        <video controls preload="metadata" style="display: none;">
+          <source src="videoforass2b.mp4" type="video/mp4">
+        </video>
+        <video controls preload="metadata" style="display: none;">
+          <source src="videoforass2c.mp4" type="video/mp4">
+        </video>
+        <video controls preload="metadata" style="display: none;">
+          <source src="videoforass2d.mp4" type="video/mp4">
+        </video>
+      </div>
+    </section>
+
+    <!-- Assignment 3 -->
+    <section class="card">
+      <h1>Assignment 3: Particle Systems</h1>
+      <div class="meta">Name: <strong>Ankit Singh</strong> &nbsp;•&nbsp; RIT ID: <strong>as8878</strong></div>
+
+      <h2>Base Simulation</h2>
+      <video controls preload="metadata" style="width:100%;max-width:920px;background:#000">
+        <!-- normal comet tail video goes here -->
+        <source src="videoforass3a.mp4" type="video/mp4" />
+        Your browser doesn’t support the video tag.
+      </video>
+
+      <h2>Extra Credit: Particle–World Interaction (Ground Bounce)</h2>
+      <video controls preload="metadata" style="width:100%;max-width:920px;background:#000">
+        <!-- ground bounce / collision demo goes here -->
+        <source src="videoforass3aextra.mp4" type="video/mp4" />
+        Your browser doesn’t support the video tag.
+      </video>
+
+
+    </section>
 
   </main>
 
   <script>
-  let currentVideo = 0;
-  const videos = document.querySelectorAll('#videoContainer video');
+    // --- Assignment 2 video carousel logic ---
+    let currentVideo = 0;
+    const videos = document.querySelectorAll('#videoContainer video');
 
-  function showVideo(index) {
-    videos.forEach((vid, i) => {
-      vid.style.display = i === index ? 'block' : 'none';
-    });
-  }
+    function showVideo(index) {
+      videos.forEach((vid, i) => {
+        vid.style.display = i === index ? 'block' : 'none';
+      });
+    }
 
-  function nextVideo() {
-    currentVideo = (currentVideo + 1) % videos.length;
+    function nextVideo() {
+      currentVideo = (currentVideo + 1) % videos.length;
+      showVideo(currentVideo);
+    }
+
+    function prevVideo() {
+      currentVideo = (currentVideo - 1 + videos.length) % videos.length;
+      showVideo(currentVideo);
+    }
+
+    // Initial setup for Assignment 2 section
     showVideo(currentVideo);
-  }
-
-  function prevVideo() {
-    currentVideo = (currentVideo - 1 + videos.length) % videos.length;
-    showVideo(currentVideo);
-  }
-
-  // Initial setup
-  showVideo(currentVideo);
-</script>
+  </script>
 
 </body>
 </html>
