Updated ass 4 videos

--- a/index.html
+++ b/index.html
@@ -116,6 +116,33 @@
 
     </section>
 
+    <section class="card">
+      <h1>Assignment 4: moCap Assignment</h1>
+      <div class="meta">Name: <strong>Ankit Singh</strong> &nbsp;•&nbsp; RIT ID: <strong>as8878</strong></div>
+
+      <h2>Wave</h2>
+      <video controls preload="metadata" style="width:100%;max-width:920px;background:#000">
+        <!-- normal comet tail video goes here -->
+        <source src="videoforass4a.mp4" type="video/mp4" />
+        Your browser doesn’t support the video tag.
+      </video>
+
+      <h2>Sneak</h2>
+      <video controls preload="metadata" style="width:100%;max-width:920px;background:#000">
+        <!-- ground bounce / collision demo goes here -->
+        <source src="videoforass4c.mp4" type="video/mp4" />
+        Your browser doesn’t support the video tag.
+      </video>
+      <h2>Arms</h2>
+      <video controls preload="metadata" style="width:100%;max-width:920px;background:#000">
+        <!-- ground bounce / collision demo goes here -->
+        <source src="videoforass4b.mp4" type="video/mp4" />
+        Your browser doesn’t support the video tag.
+      </video>
+
+
+    </section>
+
   </main>
 
   <script>
